--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h2>O Seu Pedido Perfeito</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Offiia,
-            asperiores?
+            asperioresgiti
           </p>
         </div>
         <img src="images/boneca.png" alt="boneca" />
