--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="ico.ico" type="image/x-icon">
   <title>Ateliê Sanviana</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
@@ -15,9 +16,9 @@
       <nav>
         <p class="brand">Ateliê<strong>Sanviana</strong></p>
         <ul>
-          <li><a href="#catalogo">Catálogo</a></li>
-          <li><a href="#sobre">Biografia</a></li>
-          <li><a href="#produtos">Produtos</a></li>
+          <li><a href="#maisvendidos">Mais Vendidos</a></li>
+          <li><a href="#biografia">Biografia</a></li>
+          <li><a href="#nossosprodutos">Nossos Produtos</a></li>
           <li><a href="https://www.instagram.com/ateliesanviana/">Instagram ↪</a></li>
         </ul>
         </ul>
@@ -34,23 +35,23 @@
       </div>
     </div>
   </header>
-  <section class="catalogo" id="Catalogo">
+  <section class="maisvendidos" id="maisvendidos">
     <div class="content">
-      <div class="titulo-wrapper-catalogo">
-        <p> Nossos Produtos</p>
+      <div class="titulo-foto-catalogo">
+        <p> Mais Vendidos</p>
       </div>
-      <div class="card-wrapper">
-        <div class="card-item">
+      <div class="caixa-foto">
+        <div class="caixa-item">
           <img src="images/1.png" alt="croche" />
-          <div class="card-content">
+          <div class="card-conteudo">
             <h3>Coração</h3>
             <p>Feito a mão em crochê com linha de lã
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/2.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Coração Rosa</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -58,9 +59,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/3.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Novelho Roxo</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -68,9 +69,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/4.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Novelho Preto</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -78,9 +79,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/5.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Coração Amarelo</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -88,9 +89,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/6.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Coração Roxo</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -98,9 +99,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/7.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Novelho Coração</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -108,9 +109,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/8.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Novelho Coração Roxo</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -118,9 +119,9 @@
             </p>
           </div>
         </div>
-        <div class="card-item">
+        <div class="caixa-item">
           <img src="images/9.png" alt="croche" />
-          <div class="card-content">
+          <div class="caixa-conteudo">
             <h3>Novelho Simples</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -134,38 +135,32 @@
 
   <section class="biografia" id="biografia">
     <div class="content">
-      <div class="titulo-wrapper-biografia">
+      <div class="titulo-foto-biografia">
         <p>Biografia</p>
       </div>
-      <div class="about-content">
+      <div class="caixa-coco">
         <div class="foto">
-          <img src="images/about.png" alt="About" />
+          <img src="images/about.png" alt="caixa" />
         </div>
         <div class="texto">
           <h3>História do Ateliê Sanviana</h3>
           <p>
-            Lorem ipsum d sit amet consectetur adipisicing elit.
-            Repudiandae ut inventore magni repellendus ab ad itaque facere. A
-            tenetur quam, nobis tempore illum laborum ipsa fuga, itaque
-            possimus repellat ad perspiciatis, velit reiciendis eos facilis
-            sapiente blanditiis quas officia hic beatae quibusdam! Quod
-            eligendi porro possimus voluptatum ad ipsum sapiente soluta,
-            maiores nobis tenetur adipisci officiis nisi illum quae natus
-            nostrum tempora accusantium blanditiis? Rem nesciunt illum
-            dolorum, perferendis quos consequatur suscipit cumque fugiat alias
-            sint repellat qui adipisci error est distinctio doloribus labore
-            sunt modi eos odio quibusdam dicta. Dignissimos voluptate illum
-            possimus quo. Ducimus repellat doloribus quisquam quidem?
+            Aquele famoso provérbio popular de que quem tricota um ponto aumenta outro ponto pode servir como um adendo na nossa história. Talvez a citação não seja bem assim, mas basta uma linha e uma agulha para que vários pontos se transformem em paixão. Além de bordados, essas linhas tecem histórias. Vivências que ultrapassam as décadas e deixam de ser algo feito por nossas avós e conquistam jovens, crianças homens e mulheres. Mais do que um passatempo ou ofício, crochetar acalma, e é a fuga e realização de várias pessoas.
+
+
+            Tudo começou muito cedo. Maria Luiza Lima, mais conhecida como Marilu, tinha entre 8 e 10 anos quando começou a usar suas linhas e agulhas para ajudar a mãe. O trabalho manual se tornou um dos prazeres de sua vida e hoje deseja toda a gratidão do mundo à sua mãe por ter lhe passado o que sabia. “Há mais de 50 anos aprendi a mexer com as agulhas e a transformar lãs e linhas em grande arte.”
+
+            Além de um ofício, o tricô e o crochê trouxeram muita motivação para a artesã. Apesar da ajuda da mãe, Marilu ainda tinha muito o que aprender e foi em busca de novas formas de aprendizado. “Antes não tinha muita facilidade, era só por meio de revistas e era muito grande o desafio de decifrar todos os sinais e letras e tinha que fazer sozinha, pois não podia pagar uma professora de artes. Mas venci esse obstáculo. O tempo passou, hoje tudo está mudado e muito mais prático, temos tudo no computador e é uma facilidade enorme”, relembra.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="outros" id="outros">
+  <section class="nossosprodutos" id="nossosprodutos">
     <div class="conteudo">
       <div class="titulo-novos-outros">
-        <p>Mais vendidos</p>
+        <p>Nossos Produtos</p>
       </div>
       <div class="itens-caixa-bloco">
         <div class="itens-caixa-item">
@@ -275,7 +270,7 @@
         </div>
       </div>
     </div>
-    <div class="last">Ateliê Sanviana - 2021 - Todos os direitos Reservados</div>
+    <div class="ultimo">Ateliê Sanviana - 2021 - Todos os direitos Reservados</div>
   </footer>
 </body>
 
