meu primeiro commit

--- a/index.html
+++ b/index.html
@@ -42,55 +42,7 @@
       </div>
       <div class="caixa-foto">
         <div class="caixa-item">
-          <img src="images/1.png" alt="croche" />
-          <div class="card-conteudo">
-            <h3>Coração</h3>
-            <p>Feito a mão em crochê com linha de lã
-            </p>
-          </div>
-        </div>
-        <div class="caixa-item">
-          <img src="images/2.png" alt="croche" />
-          <div class="caixa-conteudo">
-            <h3>Coração Rosa</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repellendus.
-            </p>
-          </div>
-        </div>
-        <div class="caixa-item">
-          <img src="images/3.png" alt="croche" />
-          <div class="caixa-conteudo">
-            <h3>Novelho Roxo</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repellendus.
-            </p>
-          </div>
-        </div>
-        <div class="caixa-item">
-          <img src="images/4.png" alt="croche" />
-          <div class="caixa-conteudo">
-            <h3>Novelho Preto</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repellendus.
-            </p>
-          </div>
-        </div>
-        <div class="caixa-item">
-          <img src="images/5.png" alt="croche" />
-          <div class="caixa-conteudo">
-            <h3>Coração Amarelo</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repellendus.
-            </p>
-          </div>
-        </div>
-        <div class="caixa-item">
-          <img src="images/6.png" alt="croche" />
+          <img src="images/99.png" alt="croche" />
           <div class="caixa-conteudo">
             <h3>Coração Roxo</h3>
             <p>
@@ -100,7 +52,57 @@
           </div>
         </div>
         <div class="caixa-item">
-          <img src="images/7.png" alt="croche" />
+          <img src="images/10.png" alt="croche" />
+          <div class="caixa-conteudo">
+            <h3>Coração Rosa</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus.
+            </p>
+          </div>
+        </div>
+        <div class="caixa-item">
+          <img src="images/88.png" alt="croche" />
+          <div class="caixa-conteudo">
+            <h3>Novelho Roxo</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus.
+            </p>
+          </div>
+        </div>
+        <div class="caixa-item">
+          <img src="images/77.png" alt="croche" />
+          <div class="caixa-conteudo">
+            <h3>Novelho Preto</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus.
+            </p>
+          </div>
+        </div>
+        <div class="caixa-item">
+          <img src="images/66.png" alt="croche" />
+          <div class="caixa-conteudo">
+            <h3>Coração Amarelo</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus.
+            </p>
+          </div>
+        </div>
+        <div class="caixa-item">
+          <img src="images/55.png" alt="croche" />
+          <div class="caixa-conteudo">
+            <h3>Coração Roxo</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repellendus.
+            </p>
+          </div>
+        </div>
+        <div class="caixa-item">
+          <img src="images/44.png" alt="croche" />
           <div class="caixa-conteudo">
             <h3>Novelho Coração</h3>
             <p>
@@ -110,7 +112,7 @@
           </div>
         </div>
         <div class="caixa-item">
-          <img src="images/8.png" alt="croche" />
+          <img src="images/33.png" alt="croche" />
           <div class="caixa-conteudo">
             <h3>Novelho Coração Roxo</h3>
             <p>
@@ -120,7 +122,7 @@
           </div>
         </div>
         <div class="caixa-item">
-          <img src="images/9.png" alt="croche" />
+          <img src="images/22.png" alt="croche" />
           <div class="caixa-conteudo">
             <h3>Novelho Simples</h3>
             <p>
@@ -164,7 +166,7 @@
       </div>
       <div class="itens-caixa-bloco">
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/11.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Gorro Crochê</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
@@ -172,63 +174,63 @@
         </div>
 
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/22.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/33.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/44.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/55.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/66.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/77.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/88.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/99.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
         <div class="itens-caixa-item">
-          <img src="images/feature-planet.png" alt="Itens" />
+          <img src="images/10.png" alt="Itens" />
           <div class="itens-texto-conteudo">
             <h3>Title</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
