--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="ico.ico" type="image/x-icon">
   <title>Ateliê Sanviana</title>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+
 </head>
 
 <body>
@@ -274,6 +275,8 @@
     </div>
     <div class="ultimo">Ateliê Sanviana - 2021 - Todos os direitos Reservados</div>
   </footer>
+
 </body>
+<script src="index.js"></script>
 
 </html>
