cria funçoes de proximo e anterior da galeria

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       </div>
       <div class="caixa-foto">
         <div class="caixa-item">
-          <img src="images/99.png" alt="croche" />
+          <img id="imagem1" src="images/99.png" alt="croche" />
+          <button onclick="vaiParaProximo()">Próxima</button>
+          <button onclick="vaiParaAnterior()">Anterior</button>
           <div class="caixa-conteudo">
             <h3>Coração Roxo</h3>
             <p>
